# cuomputer

./: .gitignore  AGENTS.md  CHANGELOG.md  README.md  config.py  file.txt  gtoken.json  main.py  pre-push  pyproject.toml  requirements.txt  runner.py  runtime.txt
bot/: bot.py  slash_commands.py
bot/_archive/: bot.py  guest_bot.py  slash_commands.py
bot/db/: fbdb.py  fetch_data.py
bot/on_member_join/: on_member_join.py
bot/on_member_update/: on_member_update.py
bot/on_message/: on_message.py  respond.py
bot/on_message/bots/: ai_bot.py  flirtybot.py  googlebot.py  gptbot.py  image_handler.py  infobox_generator.py  knowledgebot.py  librarybot.py  mistralbot.py  mongobot.py  openai_bot.py  qna_default.py  read_message_aloud.py  response_handlers.py  riverpedia_api.py  riversbot.py  rolesbot.py  weezerpedia.py
bot/on_message/bots/_archive/: _archive.py  flirtybot.py  mongobot.py  riversbot.py  text_to_speech_handler.py
bot/on_message/classes/: message.py
bot/on_ready/: main.py  on_ready.py  roles_sheet.py
bot/scripts/: add_roles.py  assert_old_users_have_connected.py  conditions.py  connect_to_mrn.py  delete_message_if_conditions_are_met.py  delete_roles.py  get_firestore_user.py  get_response.py  is_message_from_another_guild.py  is_newbie.py  is_request_for_replicate.py  is_request_for_server_time.py  message_is_a_skipper.py  remove_roles.py  roles_edit.py  wiki_to_markdown.py
bot/scripts/message/: finalize_response.py  fix_nick.py  forbidden.py  message.py  sentiment.py
bot/setup/: bots.py  cache.py  discord_bot.py  init.py  init_sessions.py  resource_manager.py  services.py
bot/setup/services/: demoji_setup.py  dialogflow_sessions.py  file_loader.py  google_services.py  openai_sessions.py  roles_sheet.py
bot/setup/services/_archive/: init_sessions.py
bot/slash_commands/: commands.py
data/: boy_names.txt  common_words.txt  flirty_florida.txt  girl_names.txt  inspiring.txt  lists.py  lyrics rc 13 plus chars.txt  pickup_lines.txt  published lyrics over 13 chars.txt  sweet_things.txt  writing prompts.txt
data/interviews qna for discord_bot/: Rivers Interviews Transcribed - Recovered Doc.txt  fanqna.csv  question_answer_pairs - Copy.csv  question_answer_pairs.csv  spin.txt
docs/: Discord-Firestore-Role-Sync.md  Discord-Weezify-Connection.md
hooks/: install-hooks.ps1
tests/: test_riverpedia.py  test_weezerpedia.py
tests/unit_tests/: test_openai_bot.py  test_wiki_to_markdown.py
